# LambertsProblem

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Lambert.hpp  Stumff.hpp  StumpffFunc.hpp  Vector3D.hpp
tests/: CMakeLists.txt  Lambert.cpp
